--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "formik": "^2.1.7",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-material-ui-carousel": "^2.0.0",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "thunk": "^0.0.1",
     "validator": "^13.1.17"
   },
