--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.20.0",
+    "final-form": "^4.20.1",
+    "final-form-material-ui": "^0.3.0",
     "formik": "^2.1.7",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-final-form": "^6.5.1",
     "react-material-ui-carousel": "^2.0.0",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
